# OpenSAST

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  오픈소스_SW보안약점_진단도구_개발계획서.md
.github/: dependabot.yml
.github/workflows/: ci.yml
aisast/: __main__.py  cli.py  config.py  hooks.py  models.py  observability.py
aisast/api/: __init__.py  app.py  deps.py  schemas.py  security.py
aisast/api/middleware/: __init__.py  rate_limit.py  request_size.py  security_headers.py
aisast/api/routes/: __init__.py  audit.py  auth.py  dashboard.py  findings.py  gate.py  mois.py  organizations.py  projects.py  reports.py  rule_sets.py  scans.py  suppressions.py
aisast/db/: __init__.py  migrate.py  models.py  repo.py  session.py
aisast/engines/: __init__.py  bandit.py  base.py  codeql.py  eslint.py  gosec.py  opengrep.py  registry.py  spotbugs.py
aisast/llm/: __init__.py  anthropic.py  base.py  noop.py  ollama.py  prompts.py  triage.py
aisast/mois/: __init__.py  catalog.py  loader.py  references.py
aisast/orchestrator/: __init__.py  celery_app.py  pipeline.py  tasks.py
aisast/plugins/: __init__.py  registry.py
aisast/reports/: __init__.py  excel.py  html.py  pdf.py  sarif.py
aisast/resources/: reference_standards.sample.yaml
aisast/sarif/: __init__.py  merge.py  normalize.py  parser.py
aisast/services/: __init__.py  base.py  finding_service.py  gate_service.py  project_service.py  rule_set_service.py  scan_service.py  suppression_service.py
aisast/utils/: __init__.py  logging.py  paths.py  subprocess.py
alembic/: env.py
alembic/versions/: 20260415_0001_initial.py  20260416_0002_composite_indexes.py  20260420_0003_multitenancy.py
deploy/nginx/: nginx.conf
docs/: ARCHITECTURE.md  LLM_ENHANCEMENT_PLAN.md  ROADMAP.md  USER_GUIDE.md  install-windows-wsl2.md  오픈소스_SW보안약점_진단도구_개발계획서.md
docs/adr/: ADR-0001-unified-analysis-pipeline.md  ADR-0002-joern-version-pinning.md  ADR-0004-engine-version-governance.md
docs/plan/: UPGRADE-PLAN-unified-analysis.md
frontend/: Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FindingsTable.test.tsx  FindingsTable.tsx  NlSearchBox.test.tsx  NlSearchBox.tsx
frontend/src/pages/: AuditLog.test.tsx  AuditLog.tsx  Dashboard.test.tsx  Dashboard.tsx  IssueSearch.test.tsx  IssueSearch.tsx  Login.test.tsx  Login.tsx  MoisCatalog.tsx  ProjectDetail.tsx  Projects.tsx  RuleSets.tsx  ScanDetail.tsx
frontend/src/store/: auth.ts
frontend/src/test/: msw-server.ts  setup.ts  test-utils.tsx
opensast/: __init__.py  __main__.py  cli.py  config.py  hooks.py  models.py  observability.py
opensast/api/: __init__.py  app.py  deps.py  schemas.py  security.py
opensast/api/middleware/: __init__.py  csrf.py  prometheus.py  rate_limit.py  security_headers.py
opensast/db/: __init__.py  base.py  migrate.py  models.py  repo.py  session.py
opensast/engines/: __init__.py  bandit.py  base.py  codeql.py  eslint.py  gosec.py  opengrep.py  registry.py  spotbugs.py
opensast/llm/: __init__.py  anthropic.py  base.py  noop.py  ollama.py  triage.py
opensast/mois/: __init__.py  loader.py  references.py
opensast/orchestrator/: __init__.py  celery_app.py  pipeline.py  tasks.py
opensast/plugins/: __init__.py  registry.py
opensast/reports/: __init__.py  excel.py  html.py  pdf.py  sarif.py
opensast/resources/: __init__.py  mois_catalog.sample.yaml  reference_standards.sample.yaml
opensast/sarif/: __init__.py  merge.py  normalize.py  parser.py
opensast/services/: __init__.py  base.py  finding_service.py  gate_service.py  project_service.py  rule_set_service.py  scan_service.py  suppression_service.py
opensast/utils/: __init__.py  logging.py
scripts/: docker-build-multiarch.sh
tests/: conftest.py  test_account_lockout_e2e.py  test_api_audit.py  test_api_auth.py  test_api_dashboard.py  test_api_findings.py  test_api_gate.py  test_api_mois_reports_health.py  test_api_projects.py  test_api_rule_sets.py  test_api_scans.py  test_api_suppressions.py  test_auth_refresh.py  test_bootstrap_admin.py  test_catalog_overlay.py  test_celery_integration.py  test_celery_pool_selection.py  test_cli.py  test_config_work_dir_default.py  test_csrf_middleware.py  test_db_migrate.py  test_engine_integration.py  test_engine_registry.py  test_finding_workflow.py  test_hooks.py  test_llm_triage.py  test_merge_severity.py  test_mois_catalog.py  test_observability.py  test_password_policy.py  test_pipeline_second_pass.py  test_plugin_registry.py  test_references.py  test_reports.py  test_sarif_fixtures.py  test_sarif_parser.py  test_scan_upload.py  test_security_middleware.py  test_settings_profile.py  test_triage_cache.py
tests/fixtures/: opengrep-sample.sarif.json
(+73 files in other folders)
