[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisast"
version = "0.1.0"
description = "Open-source SAST tool covering Korea MOIS 49 security weakness items"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "aiSAST contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "anthropic>=0.39",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "weasyprint>=62.0",
    "pyyaml>=6.0",
    "minio>=7.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
aisast = "aisast.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aisast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
