[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensast"
version = "0.5.0"
description = "Open-source multi-engine SAST orchestrator covering Korea MOIS 49 security weakness items"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "openSAST contributors" }]
keywords = [
    "sast",
    "static-analysis",
    "security",
    "mois",
    "korea",
    "opengrep",
    "semgrep",
    "codeql",
    "spotbugs",
    "bandit",
    "llm",
    "fastapi",
]
classifiers = [
    # Maturity
    "Development Status :: 4 - Beta",

    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    # License
    "License :: OSI Approved :: Apache Software License",

    # Natural language
    "Natural Language :: Korean",
    "Natural Language :: English",

    # Supported OS — POSIX only (Linux / macOS)
    # Windows 는 WSL2 또는 Docker Desktop 경유로만 지원. 네이티브 미지원.
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",

    # Python
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",

    # Framework / Topic
    "Framework :: FastAPI",
    "Framework :: Celery",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",

    # Typing
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "anthropic>=0.39",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "weasyprint>=62.0",
    "pyyaml>=6.0",
    "minio>=7.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24",
    "python-json-logger>=2.0",
    "tenacity>=8.3",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/sungalex/openSAST"
Documentation = "https://github.com/sungalex/openSAST/blob/main/docs/USER_GUIDE.md"
Architecture = "https://github.com/sungalex/openSAST/blob/main/docs/ARCHITECTURE.md"
Issues = "https://github.com/sungalex/openSAST/issues"
Repository = "https://github.com/sungalex/openSAST"

[project.scripts]
opensast = "opensast.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["opensast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "engine: requires engine binary (semgrep, bandit, etc.)",
    "celery_integration: requires Redis + Celery worker",
]
addopts = "-m 'not engine and not celery_integration'"
